[package]
name = "libmasp"
description = "Rust experimental MASP FFI"
version = "0.2.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Jay Graber <jay@z.cash>",
    "Simon Liu <simon@z.cash>",
    "joe <joe@heliax.dev>"
]
homepage = "https://github.com/anoma/masp"
repository = "https://github.com/anoma/masp"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "masp"
path = "src/rustmasp.rs"
crate-type = ["staticlib"]

[dependencies]
bellman = { version = "0.11.1", default-features = false, features = ["groth16"] }
blake2b_simd = "1.0.0"
blake2s_simd = "1.0.0"
bls12_381 = "0.6"
ff = "0.11"
group = "0.11"
jubjub = "0.8"
libc = "0.2"
lazy_static = "1"
rand_core = "0.6"
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "2425a08" }
masp_primitives = { path = "../masp_primitives" }
masp_proofs = { path = "../masp_proofs" }
itertools = "0.10.1"
subtle = "2.2.3"

[badges]
maintenance = { status = "actively-developed" }

[dependencies.zcash_note_encryption]
version = "0.1"
git = "https://github.com/zcash/librustzcash/"
rev = "2425a08"
features = ["pre-zip-212"]