[package]
name = "masp_primitives"
description = "Rust implementations of the experimental MASP primitives (derived from zcash_primitives)"
version = "0.5.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>",
    "joe <joe@heliax.dev>",
]
homepage = "https://github.com/anoma/masp"
repository = "https://github.com/anoma/masp"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
aes = "0.7"
bitvec = "0.22"
bip0039 = { version = "0.9", features = ["std", "all-languages"] }
blake2b_simd = "1"
blake2s_simd = "1"
#bls12_381 = "0.6"
bls12_381 = { path = "../../bls12_381" }
byteorder = "1"
chacha20poly1305 = "0.9"
ff = "0.11"
fpe = "0.5"
group = "0.11"
hex = "0.4"
incrementalmerkletree = "=0.3.0-beta.1"
jubjub = "0.8"
lazy_static = "1"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
rand_core = "0.6"
subtle = "2.2.3"
zcash_primitives = { git = "https://github.com/zcash/librustzcash" }
zcash_encoding = { version = "0.0", git = "https://github.com/zcash/librustzcash" }
#getrandom = { version = "0.2", features = ["js, custom"] }

[dev-dependencies]
criterion = "0.3"
proptest = "1.0.0"
rand_xorshift = "0.3"

[features]
test-dependencies = ["proptest"]

[badges]
maintenance = { status = "actively-developed" }
