[package]
name = "masp_primitives"
description = "Rust implementations of the experimental MASP primitives (derived from zcash_primitives)"
version = "0.5.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>",
    "joe <joe@heliax.dev>",
]
homepage = "https://github.com/anoma/masp"
repository = "https://github.com/anoma/masp"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
aes = "0.7"
bitvec = "0.22"
bip0039 = { version = "0.9", features = ["std", "all-languages"] }
blake2b_simd = "1.0.0"
blake2s_simd = "1.0.0"
bls12_381 = "0.6"
byteorder = "1"
crypto_api_chachapoly = "0.4"
chacha20poly1305 = "0.9"
ff = "0.11"
fpe = "0.5"
group = "0.11"
hex = "0.4"
incrementalmerkletree = "0.2"
jubjub = "0.8"
lazy_static = "1"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
rand_core = "0.6"
ripemd160 = { version = "0.9", optional = true }
secp256k1 = { version = "0.20", optional = true }
sha2 = "0.9"
subtle = "2.2.3"
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "2425a08" }
zcash_encoding = { version = "0.0", git = "https://github.com/zcash/librustzcash", rev = "2425a08" }
borsh = "0.9.0"
derive_more = "0.99.0"
serde = {version = "1.0.125", features = ["derive"]}

[dev-dependencies]
criterion = "0.3"
proptest = "1.0.0"
rand_xorshift = "0.3"

[features]
transparent-inputs = ["ripemd160", "secp256k1"]
test-dependencies = ["proptest"]


[badges]
maintenance = { status = "actively-developed" }
