[package]
name = "masp_primitives"
description = "Rust implementations of the experimental MASP primitives (derived from zcash_primitives)"
version = "1.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>",
    "joe <joe@heliax.dev>",
    "Murisi Tarusenga <murisi@heliax.dev>",
    "Heliax AG <hello@heliax.dev>",
]
homepage = "https://github.com/anoma/masp"
repository = "https://github.com/anoma/masp"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
zcash_encoding = { version = "0.2", git = "https://github.com/zcash/librustzcash", rev = "bd7f9d7" }

# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
# - CSPRNG
rand = "0.8"
rand_core = "0.6"

# - Digests (output types exposed)
blake2b_simd = "1"
sha2 = "0.10"

# - Metrics
memuse = "0.2.1"

# - Checked arithmetic
num-traits = "0.2.14"

# - Secret management
subtle = "2.2.3"

# - Shielded protocols
bls12_381 = "0.8"
ff = "0.13"
group = { version = "0.13", features = ["wnaf-memuse"] }
incrementalmerkletree = "0.3"
jubjub = "0.10"
nonempty = "0.7"

# - Static constants
lazy_static = "1"

# - Test dependencies
proptest = { version = "1.0.0", optional = true }

# - ZIP 339
bip0039 = { version = "0.10", features = ["std", "all-languages"] }

# Dependencies used internally:
# (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)
# - Encodings
byteorder = "1"
hex = "0.4"

# - Shielded protocols
bitvec = "1"
blake2s_simd = "1"

# - ZIP 32
aes = "0.8"
fpe = "0.6"

borsh = {version = "1.2.0", features = ["unstable__schema", "derive"]}
[dependencies.masp_note_encryption]
version = "1.0.0"
path = "../masp_note_encryption"
features = ["pre-zip-212"]

[dev-dependencies]
chacha20poly1305 = "0.10"
criterion = "0.4"
proptest = "1.0.0"
assert_matches = "1.3.0"
rand_xorshift = "0.3"

[features]
transparent-inputs = []
test-dependencies = ["proptest"]
default = ["transparent-inputs"]

[badges]
maintenance = { status = "actively-developed" }
