[package]
name = "masp_proofs"
description = "Experimental MASP zk-SNARK circuits and proving APIs, based on zcash_proofs"
version = "0.9.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "joe <joe@heliax.dev>",
]
homepage = "https://github.com/anoma/masp"
repository = "https://github.com/anoma/masp"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
masp_primitives = { version = "0.9", path = "../masp_primitives" }

# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
bellman = { version = "0.13.1", default-features = false, features = ["groth16"] }
bls12_381 = "0.7"
group = "0.12"
jubjub = "0.9"
lazy_static = "1"
minreq = { version = "2", features = ["https"], optional = true }
rand_core = "0.6"
tracing = "0.1"

# Dependencies used internally:
# (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)
blake2b_simd = "1"
directories = { version = "4", optional = true }
redjubjub = "0.5"
wagyu-zcash-parameters = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.10.1"

[dev-dependencies]
byteorder = "1"
criterion = "0.4"
rand_xorshift = "0.3"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] } # MSRV 1.56

[features]
default = ["local-prover", "multicore"]
bundled-prover = ["wagyu-zcash-parameters"]
download-params = ["minreq", "directories"]
local-prover = ["directories"]
multicore = ["bellman/multicore"]
embed-verifying-key = []

[lib]
bench = false

[[bench]]
name = "sapling"
harness = false
required-features = ["local-prover"]

[[bench]]
name = "convert"
harness = false
required-features = ["local-prover"]

[[example]]
name = "get-params-path"
required-features = ["directories"]

[[example]]
name = "download-params"
required-features = ["download-params"]

[[example]]
name = "serialize-params"
required-features = ["download-params"]

[badges]
maintenance = { status = "actively-developed" }
